Login y parte del register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">AppetMovilApp</string>
+    <string name="app_name">AppetMovil</string>
+    <string name="email">Email</string>
+    <string name="password">Contraseña</string>
+    <string name="login">Iniciar Sesión</string>
+    <string name="confirmPassword">Confirmar contraseña</string>
+    <string name="phone">Teléfono</string>
 </resources>
